Added firebase support
